# ta1viewer

./: README.md  pyproject.toml  setup.py
examples/: xdd_viz_demo_notebook.ipynb
examples/sidarthe_paper/sidarthe/: sidarthe.json  sidarthe.parquet  sidarthe_equations.parquet  sidarthe_figures.parquet  sidarthe_pdfs.parquet  sidarthe_sections.parquet  sidarthe_tables.parquet
ta1viewer/: __init__.py  extraction.py  jsonviewer.html  jsonviewer.py  viewer.html  viewer.py
