name = "ta1viewer"

[tool.poetry]
name = "ta1viewer"
version = "0.1.0"
description = "viewing tools"
authors = ["Oscar Moll <orm@csail.mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
pypdf = "^3"
ipykernel = "^6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
